k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api
  namespace: app-sidecar-istio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-api
  template:
    metadata:
      labels:
        app: hello-api
    spec:
      containers:
      - name: hello-api
        image: hello-api:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-api-service
  namespace: app-sidecar-istio
spec:
  selector:
    app: hello-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
