k8s/keycloak-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-internal
  namespace: app-sidecar-istio
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
